<resources>
    <string name="app_name">NetflixRoulette</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="no_internet_connection">No internet connection!</string>
    <string name="menu_saved_movies">Saved movies</string>
    <string name="menu_title_search">Search with title</string>
    <string name="menu_director_search">Search with director</string>

    <string name="the_movie_db_key">297be347b583f60d9971ad1d3f4b4882</string>

    <string name="netflix">N</string>
    <string name="roulette">R</string>

    <string name="rating_hint">Rating</string>
    <string name="release_year_hint">Release year</string>
    <string name="category_hint">Category</string>
    <string name="director_hint">Director</string>
    <string name="title_hint">Title</string>
    <string name="summary_hint">Summary</string>

    <string name="search_movies_tvshows">Search movies and tv shows..</string>
    <string name="search_directors">Search directors..</string>
    <string name="search_saved_movies">Search among saved movies..</string>

    <string name="movie_deleted">Movie deleted!</string>
    <string name="movie_saved">Movie saved!</string>
</resources>
