<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/details_saved_movie_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/details_saved_movie_rating"
        style="@style/MiddleText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:hint="@string/rating_hint"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.25" />

    <TextView
        android:id="@+id/details_saved_movie_release_year"
        style="@style/MiddleText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:hint="@string/release_year_hint"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.25" />

    <ImageView
        android:id="@+id/details_saved_movie_poster"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/border_red_bottom"
        android:padding="@dimen/medium_padding"
        android:src="@drawable/movies"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/details_saved_movie_category"
        style="@style/MiddleText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:hint="@string/category_hint"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_saved_movie_poster"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/details_saved_movie_director"
        style="@style/MiddleText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:hint="@string/director_hint"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_saved_movie_category"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/details_saved_movie_title"
        style="@style/MiddleText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:hint="@string/title_hint"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_saved_movie_director"
        app:layout_constraintWidth_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>